Creation of a reactive Form for the user entity (sign-up)

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             <a (click)= "navigate(loginPath)" class="nav-link">Connexion</a>
           </li>
           <li class="nav-item" [class.active]="isActive(registerPath)">
-              <a (click)="navigate(registerPath)" class="nav-link">Register</a>
+              <a (click)="navigate(registerPath)" class="nav-link">Sign-up</a>
             </li>
         </ul>
     </div>
