--- a/src/app/public/register/register/register.component.html
+++ b/src/app/public/register/register/register.component.html
@@ -1,1 +1,6 @@
-<h1>Register</h1>
+<h1 class="text-center display-4 my-5">Sign-Up</h1>
+<div class="container">
+  <div class="col-6 card mx-auto">
+    <al-register-form></al-register-form>
+  </div>
+</div>
