--- a/src/app/public/register/register-form/register-form.component.html
+++ b/src/app/public/register/register-form/register-form.component.html
@@ -15,6 +15,20 @@ class="card-body">
   autocorrect="off"
   autocomplete="off"
   />
+  <small *ngIf="name.errors &&amp; name.dirty" class="form-text text-muted">
+    <span [hidden]="!name.errors.required">
+      Username is required
+    </span>
+    <span [hidden]="!name.errors.minlength">
+      Use at least 4 characters
+    </span>
+    <span [hidden]="!name.errors.maxlength">
+      Use less than 20 characters
+    </span>
+    <span [hidden]="!name.errors.pattern">
+      Use numbers, letter, "-" or "_" only
+    </span>
+  </small>
 </div>
 <!-- Email field -->
 <div class="form-group">
@@ -28,21 +42,44 @@ class="card-body">
   autocorrect="off"
   autocomplete="off"
   />
-</div>
-<!-- Password field -->
+  <small *ngIf="email.errors &&amp; email.dirty" class="form-text text-muted">
+    <span [hidden]="!email.errors.required">
+      Email is required
+    </span>
+    <span [hidden]="!email.errors.email">
+      Use a valid email address
+    </span>
+  </small>
+  </div>
+  <!-- Password field -->
 <div class="form-group">
-  <label for="password">Password</label>
-  <input
-  id="password"
-  type="password"
-  formControlName="password"
-  class="form-control"
-  placeholder="Password"
-  />
-</div>
+    <label for="password">Password</label>
+    <input
+    id="password"
+    type="password"
+    formControlName="password"
+    class="form-control"
+    placeholder="Password"
+    />
+    <small *ngIf="password.errors &&amp; password.dirty" class="form-text text-muted">
+      <span [hidden]="!password.errors.required">
+        Password is required
+      </span>
+      <span [hidden]="!password.errors.minlength">
+        Use at least 6 characters
+      </span>
+      <span [hidden]="!password.errors.maxlength">
+        Use less than 20 characters
+      </span>
+    </small>
+  </div>
 <!-- Submit button -->
 <p class="text-center py-3">
-  <button type="submit" class="btn" [disabled]="!registerForm.valid">
+  <button
+  type="submit"
+  class="btn"
+  [disabled]="!registerForm.valid"
+  [ngClass]="{'btn-success':registerForm.valid, 'btn-default':!registerForm.value}">
     Sign-up
   </button>
 </p>
