--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
           <li class="nav-item" [class.active]="isActive(loginPath)">
-            <a (click)= "navigate(loginPath)" class="nav-link">Connexion</a>
+            <a (click)= "navigate(loginPath)" class="nav-link">Login</a>
           </li>
           <li class="nav-item" [class.active]="isActive(registerPath)">
               <a (click)="navigate(registerPath)" class="nav-link">Sign-up</a>
