--- a/src/app/public/login/login/login.component.html
+++ b/src/app/public/login/login/login.component.html
@@ -1,1 +1,6 @@
-<h1>Login</h1>
+<h1 class="text-center display-4 my-5">Login</h1>
+<div class="container">
+  <div class="col-6 card mx-auto">
+    <al-login-form></al-login-form>
+  </div>
+</div>
