--- a/src/app/protected/workday/workday-form-tasks/workday-form-tasks.component.html
+++ b/src/app/protected/workday/workday-form-tasks/workday-form-tasks.component.html
@@ -4,4 +4,7 @@
     *ngFor="let task of tasks.controls"
     [task]="task"></al-workday-form-tasks-item>
   </div>
+  <div class="text-center">
+    <al-workday-form-tasks-add (addedTask)="onAddedTask()"></al-workday-form-tasks-add>
+  </div>
 </div>
