Layout Service -> Display or not the user sidebar

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,10 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
+
+  <!-- Hamburger menu icon -->
+  <a (click)="toggleSidenav()" class="nav-link text-left">
+      <i class="material-icons align-middle">menu</i>
+  </a>
+
   <div class="container">
     <a class ="navbar-brand">Awesome List</a>
     <div class="collapse navbar-collapse">
