Update service state

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-light bg-light">
 
   <!-- Hamburger menu icon -->
-  <a (click)="toggleSidenav()" class="nav-link text-left">
+  <a *ngIf="user" (click)="toggleSidenav()" class="nav-link text-left">
       <i class="material-icons align-middle">menu</i>
   </a>
 
