--- a/src/app/public/login/login-form/login-form.component.html
+++ b/src/app/public/login/login-form/login-form.component.html
@@ -3,8 +3,9 @@ novalidate
 [formGroup]="loginForm"
 (ngSubmit)="submit()"
 class="card-body">
+
 <!-- email field-->
-<div class="for-group">
+<div class="form-group">
   <label for="email">Email</label>
   <input
   id="email"
@@ -14,7 +15,7 @@ class="card-body">
   placeholder="Email"
   autocomplete="=off"
   autocorrect="off"/>
-  <small *ngIf="email.errors &&amp; email.dirty" class="form-text text-muted">
+  <small *ngIf="email.errors && email.dirty" class="form-text text-muted">
     <span [hidden]="!email.errors.required">
       Email is required
     </span>
@@ -23,6 +24,7 @@ class="card-body">
     </span>
   </small>
 </div>
+
 <!-- password field-->
 <div class="form-group">
   <label for="password">Password</label>
@@ -32,7 +34,7 @@ class="card-body">
   formControlName="password"
   class="form-control"
   placeholder="Password"/>
-  <small *ngIf="password.errors &&amp; password.dirty" class="form-text text-muted">
+  <small *ngIf="password.errors && password.dirty" class="form-text text-muted">
     <span [hidden]="!password.errors.required">
       Password is required
     </span>
@@ -44,9 +46,10 @@ class="card-body">
     </span>
   </small>
 </div>
+
 <!--Submit button-->
 <p class="text-center py-3">
-  <button type="submit" class="btn" [disabled]="!registerForm.valid"
+  <button type="submit" class="btn" [disabled]="!loginForm.valid"
   [ngClass]="{'btn-success':loginForm.valid, 'btn-default':!loginForm.valid}">
     Login
   </button>
