--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,4 +1,5 @@
 <div class="sticky-top">
+
   <div class="nav flex-column">
     <img class="card-img-top"
       src="assets/img/home-banner.jpg"
@@ -29,7 +30,7 @@
        <i class="material-icons align-bottom mr-1">person</i>
        Profil
       </li>
-      <li (click)="navigate(parametersPath)"
+      <li *ngIf="user.hasRole('EMPLOYEE')" (click)="navigate(parametersPath)"
        [class.list-group-item-success]="isActive(parametersPath)"
        class="list-group-item">
        <i class="material-icons align-bottom mr-1">settings</i>
