--- a/src/app/protected/parameters/parameters/parameters.component.html
+++ b/src/app/protected/parameters/parameters/parameters.component.html
@@ -1,1 +1,19 @@
 <h1>Parameters</h1>
+
+<form [formGroup]="parametersForm" (ngSubmit)="onSubmit()">
+  <select formControlName="pomodoro" class="form-control">
+    <option value="" disabled>Select the duration of your pomodoro</option>
+    <option *ngFor="let pomodoro of pomodoros" [ngValue]="pomodoro">
+      {{ pomodoro }}
+    </option>
+  </select>
+  <div class="text-right mt-3">
+    <button
+    type="submit"
+    [disabled]="!parametersForm.valid"
+    class="btn btn-success">Save
+    </button>
+  </div>
+
+
+</form>
