--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,9 +1,12 @@
 <div class="sticky-top">
 
   <div class="nav flex-column">
-    <img class="card-img-top"
-      src="assets/img/home-banner.jpg"
-      alt="sidenav banner">
+    <div class="nav-cover">
+      <img class="card-img-top" src="assets/img/home-banner.jpg" alt="sidenav banner">
+      <!-- Add avatar profil-->
+      <img *ngIf="user.avatar" class="img-avatar rounded-circle" width="48" height="48" [src]="user.avatar" alt="sidenav avatar">
+    </div>
+
     <div class="card-header">Hi, {{ user?.name }} !</div>
     <ul class="list-group list-group-flush">
       <li (click)="navigate(dashboardPath)"
